# Udacity-Self-Driving-Car-Engineer-Nanodegree

./: .gitignore  README.md
CarND-TensorFlow-Lab/: lab.ipynb
Term1-cnn-examples/: main.py
Term1-proj1-LaneLines/: P1.ipynb  P1.py  README.md  writeup.md
Term1-proj2-Traffic-Sign-Classifier/: README.md  Traffic_Sign_Classifier.html  Traffic_Sign_Classifier.ipynb  Traffic_Sign_Classifier.py  crop_traffic_sign_imgs.py  writeup.md
Term1-proj3-Behavioral-Cloning/: README.md  config.py  data_exploration.ipynb  data_visualization.py  import_data.py  load_data.py  model.py  writeup.md  writeup_template.md
Term1-proj4-Advanced-Lane-Lines/: README.md  camera_calibration.ipynb  camera_calibration.py  image_binarization.ipynb  image_binarization.py  lane_lines.ipynb  lane_lines.py  main_adv_lane_finding.ipynb  main_adv_lane_finding.py  perspective_transformation.py  writeup.md
Term1-proj5-Vehicle-Detection/: README.md  classifiers.ipynb  classifiers.py  classifiers_pickle.p  configuration.py  feature_extracters.ipynb  feature_extracters.py  file_utils.py  main_vehicle_detection.ipynb  main_vehicle_detection.py  parameter-tuning.csv  sliding_windows.ipynb  sliding_windows.py  writeup.md
Term2-proj1-Extended-Kalman-Filter/: CMakeLists.txt  README.md  build.sh
Term2-proj2-Unscented-Kalman-Filter/: CMakeLists.txt  README.md
Term2-proj2-Unscented-Kalman-Filter/data/: accuracy.txt  analyze_data.ipynb  headings_data_file.txt  output.txt  output_lidar.txt  output_radar.txt  rmse.ods
Term2-proj2-Unscented-Kalman-Filter/src/: main.cpp  main_fileio.cpp  test_ukf.cpp  tools.cpp  ukf.cpp  ukf.h
(+30 files in other folders)
